mascara-notifier-v2: --short refactoring